--- a/src/main/resources/templates/admin/room_management.html
+++ b/src/main/resources/templates/admin/room_management.html
@@ -21,7 +21,7 @@
             <div class="col-sm-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <a href="#" class="list-group-item active">
+                        <a href="" class="list-group-item active"  type="button" data-toggle="modal" data-target="#login-modal">
                             <center><strong>客房管理</strong></center>
                         </a>
                     </div>
@@ -77,42 +77,55 @@
 <div class="modal fade" id="login-modal" tabindex="-1" data-remote="room_modefy.html">
     <div class="modal-dialog">
         <div class="modal-content">
+            <div class="modal-header">
+                <button class="close" data-dismiss="modal">&times;</button>
+                <h4>客房信息添加</h4>
+            </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-offset-2 col-xs-offset-2 col-lg-offset-2">
+                        <div class="modal-body">
+
+                            <form action="/roomAdd" method="post">
+                                <div class="form-group">
+                                    <label for="number">房间号</label>
+                                    <input type="number" class="form-control" id="number" placeholder="输入房间号"  name="roomNum">
+                                </div>
+
+                                <div class="form-group">
+                                    <label >是否停用</label>
+                                    <select name="status">
+                                        <option value="1">否</option>
+                                        <option value="0">是</option>
+                                    </select>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="submit" class="btn btn-primary">确定</button>
+                                </div>
+                            </form>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+
+
 
         </div>
     </div>
 </div>
-
 <script>
-
     $(function() {
-
-        $("html, body").animate({scrollTop: $('#'+domid).offset().top - 80 }, {duration: 500,easing: "swing"});
-
-        return false;
-
-        $('#login-modal').on('show.bs.modal', function() {
-            console.log('显示对话框');
-        });
-        $('#login-modal').on('shown.bs.modal', function() {
-            console.log('对话框已经显示了');
-        });
-        $('#login-modal').on('hide.bs.modal', function() {
-            console.log('隐藏对话框');
-        });
-        $('#login-modal').on('hidden.bs.modal', function() {
-            console.log('隐藏了对话框');
-        });
-        $('#login-modal').on('loaded.bs.modal', function() {
-            console.log('已经加载好了对话框里面的内容');
-        });
-        $('#slideshow').on('slide.bs.carousel', function() {
-            console.log('播放幻灯片');
-        });
-        $('#slideshow').on('slid.bs.carousel', function() {
-            console.log('播放完成！');
+        $('#login-modal').modal({
+            show: false,
+            backdrop: false,
+            remote: 'XiuGai.html'
         });
     });
+
 </script>
+
 
 </body>
 </html>
