--- a/src/main/resources/templates/admin/reservation_management.html
+++ b/src/main/resources/templates/admin/reservation_management.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>客房预订管理</title>
     <script src="js/app.js"></script>
     <script src="js/holder.js"></script>
     <script src="js/bootstrap.min.js"></script>
