--- a/src/main/resources/templates/admin/room_management.html
+++ b/src/main/resources/templates/admin/room_management.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>客房管理</title>
     <script src="js/app.js"></script>
     <script src="js/holder.js"></script>
     <script src="js/bootstrap.min.js"></script>
