--- a/src/main/resources/templates/admin/room_modefy.html
+++ b/src/main/resources/templates/admin/room_modefy.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>预约看房订单修改</title>
+    <title>客房信息修改</title>
 </head>
 <script src="js/app.js"></script>
 <script src="js/holder.js"></script>
