--- a/src/main/resources/templates/user/apartment_location.html
+++ b/src/main/resources/templates/user/apartment_location.html
@@ -98,7 +98,7 @@
     });
 
     driving.search([
-        {keyword: '意大利风情街',city:'天津'},
+        {keyword: '',city:''},
         {keyword: '北京交通大学海滨学院',city:'黄骅'}
     ], function(status, result) {
 
