--- a/src/main/resources/templates/user/buy_goods.html
+++ b/src/main/resources/templates/user/buy_goods.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>商品购买</title>
   <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
   <script src="js/jquery-3.5.1.min.js"></script>
 
