--- a/src/main/resources/templates/user/room_book.html
+++ b/src/main/resources/templates/user/room_book.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>客房预订</title>
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
