对商品管理弹出添加页面进行完善

--- a/src/main/resources/templates/admin/goods_management.html
+++ b/src/main/resources/templates/admin/goods_management.html
@@ -84,14 +84,14 @@
                                 <label for="name">名称</label>
                                 <input type="text" class="form-control" id="name" placeholder="输入名称" name="goodsName">
                             </div>
-<!--                            <div class="form-group">-->
-<!--                                <label for="price">单价</label>-->
-<!--                                <input type="number" class="form-control" id="price" placeholder="输入单价" name="goodsPrice">-->
-<!--                            </div>-->
-<!--                            <div class="form-group">-->
-<!--                                <label for="number">数量</label>-->
-<!--                                <input type="number" class="form-control" id="number" placeholder="输入数量" name="goodsNumber">-->
-<!--                            </div>-->
+                            <div class="form-group">
+                                <label for="price">单价</label>
+                                <input type="number" class="form-control" id="price" placeholder="输入单价" name="goodsPrice">
+                            </div>
+                            <div class="form-group">
+                                <label for="number">数量</label>
+                                <input type="number" class="form-control" id="number" placeholder="输入数量" name="goodsNumber">
+                            </div>
                             <div class="modal-footer">
                                 <button type="submit" class="btn btn-primary">确定</button>
                             </div>
