--- a/src/main/resources/templates/admin/message.html
+++ b/src/main/resources/templates/admin/message.html
@@ -13,7 +13,12 @@
       href="css/custom/el-custom.css">
 <body>
 <div th:insert="admin/navigate::nav"></div>
-<div id="app" class="mx-container">
+<div class="panel-heading" style="margin-top: -17px;">
+    <a href="#" class="list-group-item active">
+        <center><strong>留言管理</strong></center>
+    </a>
+</div>
+<div id="app" class="mx-container" style="margin-top: -27px;">
     <div class="mx-main-content">
         <div class="mx-table-content">
             <el-table
@@ -26,31 +31,15 @@
                         width="50">
                 </el-table-column>
                 <el-table-column
-                        prop="userLoginId"
-                        label="账号"
-                        width="150">
-                </el-table-column>
-                <el-table-column
                         prop="userName"
-                        label="姓名"
-                        width="150">
-                </el-table-column>
-                <el-table-column
-                        prop="email"
-                        label="邮箱"
-                        width="150">
-                </el-table-column>
-                <el-table-column
-                        prop="mobile"
-                        label="电话"
-                        align="center"
-                        width="150">
+                        label="用户名"
+                        width="250">
                 </el-table-column>
                 <el-table-column
                         prop="userType"
                         label="用户类型"
                         align="center"
-                        width="150">
+                        width="250">
                     <template slot-scope="scope">
                         <span v-if="scope.row.userType == '0'">系统管理员</span>
                         <span v-if="scope.row.userType == '1'">学生</span>
@@ -59,20 +48,21 @@
                     </template>
                 </el-table-column>
                 <el-table-column
-                        prop="currentStatus"
-                        label="状态"
+                        prop="title"
+                        label="标题"
+                        width="250">
+                </el-table-column>
+                <el-table-column
+                        prop="description"
+                        label="留言内容"
                         align="center"
-                        width="150">
-                    <template slot-scope="scope">
-                        <span v-if="scope.row.currentStatus == '0'">正常</span>
-                        <span v-if="scope.row.currentStatus == '1'">禁用</span>
-                    </template>
+                        width="250">
                 </el-table-column>
                 <el-table-column
                         prop=""
                         label="操作"
                         align="center"
-                        width="300">
+                        width="350">
                     <template slot-scope="scope">
                         <el-button
                                 type="primary"
@@ -89,14 +79,13 @@
                         <el-button type="info"
                                    size="mini" plain
                                    @click="onResetPwd(scope.$index)">
-                            重置密码
+                            一键屏蔽
                         </el-button>
                     </template>
                 </el-table-column>
             </el-table>
         </div>
     </div>
-
     <!--修改用户信息对话框-->
     <el-dialog
             :title="dialogEdit.title"
@@ -107,38 +96,20 @@
             width="60%">
         <el-form :model="mymodel" label-width="150px">
             <el-form-item hidden>
-                <el-input v-model="mymodel.userId"></el-input>
-            </el-form-item>
-            <el-form-item label="登录账号：">
-                <el-col :span="15">
-                    <el-input readonly v-model="mymodel.userLoginId"></el-input>
-                </el-col>
+                <el-input v-model="mymodel.userName"></el-input>
             </el-form-item>
             <el-form-item label="用户类型：">
                 <!--使用label表示值-->
                 <el-radio-group v-model="mymodel.userType" size="mini">
-                    <el-radio-button label="0">系统管理员</el-radio-button>
-                    <el-radio-button label="1">学生</el-radio-button>
-                    <el-radio-button label="2">老师</el-radio-button>
-                    <el-radio-button label="4">教工</el-radio-button>
+                    <el-radio-button label="0">学生</el-radio-button>
                 </el-radio-group>
             </el-form-item>
-            <el-form-item label="姓名：">
+            </el-form-item>
+            <el-form-item label="留言信息：">
                 <el-col :span="15">
-                    <el-input v-model="mymodel.userName"></el-input>
+                    <el-input v-model="mymodel.description"></el-input>
                 </el-col>
             </el-form-item>
-            <el-form-item label="邮箱">
-                <el-col :span="15">
-                    <el-input v-model="mymodel.email"></el-input>
-                </el-col>
-            </el-form-item>
-            <el-form-item label="电话">
-                <el-col :span="15">
-                    <el-input v-model="mymodel.mobile"></el-input>
-                </el-col>
-            </el-form-item>
-
             <el-form-item>
                 <el-button type="primary" size="mini" @click="onSubmitEdit()">保存</el-button>
                 <el-button size="mini" @click="dialogEdit.visible=false">取消</el-button>
@@ -176,15 +147,11 @@
                 },
 
                 mymodel:{
-                    userId:'',
-                    userLoginId:'',
-                    currentPassword:'',
-                    currentPassword2:'',
                     userName:'',
-                    email:'',
-                    mobile:'',
                     userType:'1',
-                    currentStatus:'0'
+                    titile:'',
+                    description :''
+
                 },
                 //定义一个临时变量，保存选中了哪一行数据
                 selectedIndex:-1
@@ -200,7 +167,7 @@
         methods:{
             //初始化表格：从后台获得数据
             initTable:function(){
-                axios.get("/admin/users").then(res => {
+                axios.get("/admin/messages").then(res => {
                     this.tableData = res.data;
                 })
             },
@@ -209,15 +176,10 @@
             onAdd:function () {
                 //清空表单
                 this.mymodel = {
-                    userId:'',
-                    userLoginId:'',
-                    currentPassword:'',
-                    currentPassword2:'',
                     userName:'',
-                    email:'',
-                    mobile:'',
                     userType:'1',
-                    currentStatus:'0'
+                    titile:'',
+                    description:''
                 };
 
                 this.dialog.title = '注册用户';
@@ -267,7 +229,7 @@
             //响应修改 保存 按钮
             onSubmitEdit:function () {
                 //通过axios的put方法，把表单数据提交给后台
-                axios.put("/admin/users",this.mymodel).then(res =>{
+                axios.put("/admin/messageModefy",this.mymodel).then(res =>{
                     this.$message({
                         message:'保存成功！',
                         type:'success'
