--- a/src/main/resources/templates/user/navigate.html
+++ b/src/main/resources/templates/user/navigate.html
@@ -25,6 +25,7 @@
                     <li><a href="/roombook">预定房间</a></li>
                     <li><a href="/location">公寓位置</a></li>
                     <li><a href="/buy_goods">购买商品</a></li>
+                    <li><a href="/suggestion">留言建议</a></li>
 
                 </ul>
 
