--- a/src/main/resources/templates/user/suggestion.html
+++ b/src/main/resources/templates/user/suggestion.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>留言建议</title>
+    <script src="js/jquery-3.5.1.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script src="js/del.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
 <div th:insert="user/navigate::nav"></div>
+
+<div class="panel panel-default " th:each="message:${messages}">
+    <div class="panel-heading">
+        <h2 class="panel-title" th:text="${message.userName}">Panel title</h2>
+    </div>
+
+    <div class="panel-body" >
+        <div th:text="${message.title}" style="font-size: 22px;"></div>
+        <div th:text="${message.description}"></div>
+    </div>
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12">
+    <form action="/addMessage" method="post">
+        <div>
+            <label class="col-sm-2 control-label">标题:</label>
+            <input type="text" class="form-control" placeholder="请输入标题" name="title">
+            <label class="col-sm-2 control-label">留言内容</label>
+            <textarea class="form-control" rows="3" placeholder="请输入留言" name="description"></textarea>
+            <button type="submit" class="btn btn-default btn-lg active" style="float: right;margin-top: 15px;margin-right: 11px;" th:value="${session.user.userName}" name="userName">留言
+            </button>
+        </div>
+    </form>
+
+
+</div>
+
 </body>
 </html>
